Fixed pop up in dark mode

--- a/styles/manager.scss
+++ b/styles/manager.scss
@@ -101,3 +101,7 @@ form {
 .first-row {
   color: black;
 }
+
+#checkboxes-popup {
+  color: black;
+}
